# ChangeLog for kde-base/kdemultimedia
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.12 2002/09/20 10:19:49 danarmak Exp $

  08 Sep 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  Make building koncd in 3.0.x, and kaudiocreator in 3.1.x, depend on the new
  cdr use variable. This variable is on by default, so the default behaviour
  is unchanged; therefore there is no new revision. Fix #4868.

*kdemultimedia-3.0.3 (19 Aug 2002)

  19 Aug 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  New bugfix release. Enjoy!

*kdemultimedia-3.0.2 (03 Jul 2002)

  01 Aug 2002; Mark Guertin <gerk@gentoo.org> kde-3.0.2.ebuild :
  Added ppc to keywords

  03 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  : : : : : : : : : : :

  New stability release.

  10 Jun 2002; Dan Armak <danarmak@gentoo.org> changelog:

  Pass the correct parameters to configure to enable it to find NAS.

*kdemultimedia-3.0.1.20020604 (4 Jun 2002)

  4 Jun 2002; Dan Armak <danarmak@gentoo.org> Changelog :

  This is a snapshot of the KDE CVS's KDE_3_0_x branch from June 6th.
  This branch contains only bugfixes to the 3.0 release (the 3.0.1 release
  was also of this kind).

*kdemultimedia-3.0.1 (24 May 2002)

  24 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :

  Bugfix release (KDE 3.0.1).

  12 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
  
  Disabled building with alsa. The kdemm/alsa.9 bug isn't going to disappear soon it seems.

*kdemultimedia-3.0-r1 (30 Apr 2002)

  30 Apr 2002; Dan Armak <danarmak@gentoo.org> Changelog :

  Fixed files from kmidi/config installing into /var/tmp/portage/.../$KDEDIR.
  Fixes bug #2095.

  5 Apr 2002; Dan Armak <danarmak@gentoo.org> Changelog:
  
  Add patch submitted by Michael Thompson to fix building of TIMIDITY with tcltk bindings.
  Fixes bug #1542.

*kdemultimedia-3.0 (4 Apr 2002)
