@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/kdemultimedia-3.0.3.ebuild,v 1.4 2002/10/04 05:42:41 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/kdemultimedia-3.0.3.ebuild,v 1.5 2002/10/04 14:55:11 danarmak Exp $
 inherit kde-dist flag-o-matic
 
 DESCRIPTION="KDE $PV - multimedia apps"
@@ -19,9 +19,10 @@ newdepend ">=sys-libs/ncurses-5.2
 	tcltk? ( >=dev-lang/tk-8.0.5-r2 )"
 #	alsa? ( >=media-libs/alsa-lib-0.5.9 )"
 
-RDEPEND="$RDEPEND
-	cdr? ( app-cdr/cdrtools
-	>=app-cdr/cdrdao-1.1.5 )"
+# koncd isn't compiled by default (kde.org's default)
+#RDEPEND="$RDEPEND
+#	cdr? ( app-cdr/cdrtools
+#	>=app-cdr/cdrdao-1.1.5 )"
 
 replace-flags "-O3" "-O2"
 
@@ -40,7 +41,7 @@ use tcltk	&& myinterface="$myinterface,tcltk" && myconf="$myconf --enable-tcltk"
 
 myconf="$myconf $myaudio $myinterface"
 
-use cdr		|| KDE_REMOVE_DIR="koncd"
+#use cdr		|| KDE_REMOVE_DIR="koncd"
 
 src_unpack() {
     
