@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdemultimedia
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.12 2002/09/20 10:19:49 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.13 2002/10/04 14:55:11 danarmak Exp $
+
+  04 Oct 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  Remove the kdemultimedia-3.0.3 dep on cdrtools and cdrdao altogether. koncd
+  isn't compiled by default, so these deps aren't needed.
 
   08 Sep 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
 
